<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="pref_file_manager_settings"
        android:title="@string/pref_file_manager_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/show_size_key"
            android:summary="@string/show_size_summ"
            android:title="@string/show_size" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/show_date_key"
            android:summary="@string/show_date_summ"
            android:title="@string/show_date" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_notepad_editor_settings"
        android:title="@string/pref_notepad_editor_title">
        <pl.bubson.notepadjw.utils.FontSizeListPreference
            android:key="@string/note_font_size_key"
            android:title="@string/note_font_size"
            android:summary="%s"
            android:dialogTitle="@string/note_font_size"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values"
            android:defaultValue="@string/font_size_medium" />
        <pl.bubson.notepadjw.utils.FontSizeListPreference
            android:key="@string/verse_font_size_key"
            android:title="@string/verse_font_size"
            android:summary="%s"
            android:dialogTitle="@string/verse_font_size"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values"
            android:defaultValue="@string/font_size_medium" />
        <ListPreference
            android:key="@string/verse_language_key"
            android:title="@string/verse_language_title"
            android:summary="%s"
            android:dialogTitle="@string/verse_language_dialog_title"
            android:entries="@array/verse_language_entries"
            android:entryValues="@array/verse_language_values" />
        <com.thebluealliance.spectrum.SpectrumPreference
            android:key="@string/verse_font_color_key"
            android:title="@string/verse_font_color"
            app:spectrum_colors="@array/font_colors"
            android:defaultValue="@color/default_text_color" />
        <ListPreference
            android:key="@string/verse_position_key"
            android:title="@string/verse_position_title"
            android:summary="%s"
            android:dialogTitle="@string/verse_position_dialog_title"
            android:entries="@array/verse_position_entries"
            android:entryValues="@array/verse_position_values"
            android:defaultValue="@string/verse_position_top" />
        <ListPreference
            android:key="@string/verse_area_size_key"
            android:title="@string/verse_area_size_title"
            android:summary="%s"
            android:dialogTitle="@string/verse_area_size_dialog_title"
            android:entries="@array/verse_area_size_entries"
            android:entryValues="@array/verse_area_size_values"
            android:defaultValue="@string/verse_area_size_auto" />
    </PreferenceCategory>
</PreferenceScreen>