<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.NotepadEditorActivity">

    <item
        android:id="@+id/action_text_bold"
        android:icon="@drawable/ic_format_bold_white_48dp"
        android:title="@string/button_bold"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_text_italic"
        android:icon="@drawable/ic_format_italic_white_48dp"
        android:title="@string/button_italic"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_text_underline"
        android:icon="@drawable/ic_format_underlined_white_48dp"
        android:title="@string/button_underline"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_text_bullet"
        android:icon="@drawable/ic_format_list_bulleted_white_48dp"
        android:title="@string/button_bullet"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo_white_48dp"
        android:title="@string/button_undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo_white_48dp"
        android:title="@string/button_redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_48dp"
        android:title="@string/button_save"
        app:showAsAction="always" />

    <item android:id="@+id/action_switch_to_view"
        android:icon="@drawable/ic_pageview_white_48dp"
        android:title="@string/button_switch_view"
        app:showAsAction="always" />

    <item android:id="@+id/action_switch_to_edit"
        android:icon="@drawable/ic_edit_white_48dp"
        android:title="@string/button_switch_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_help"
        android:title="@string/help_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
